<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UDP_Msg_In" Id="{07434150-5593-4972-b5fb-58f30dd250bb}">
    <Declaration><![CDATA[TYPE ST_UDP_Msg_In :
	STRUCT
		nDriveSercos_Id			:	INT;
		nControlword			:	WORD;
		nSetpoint_speed			:	INT;	// Speed in Rev/10
		nSetpoint_Acceleration	:	INT;	// Acceleration /10 (Time in relation to Vmax eg. 37500 rev/h)
		bHandShake				:	BOOL;	// UDP Bit 0 Handshake
		bSyncRunMode			:	BOOL;	// UDP Bit 8 Syncron Run Operating Mode
		bPositionMode			:	BOOL;	// UDP Bit 9 Positioning Operating Mode
		bDriveEnable			:	BOOL;	// UDP Bit 14 Drive Enable
		bDriveStop				:	BOOL;	// UDP Bit 15 Drive Stop -> Drive is locked
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>